2005-05-05  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* include/java_lang_VMProcess.h:
	Regenerated.
	* native/jni/java-lang/java_lang_VMProcess.c:
	Added missing #include statement.
	
2005-05-04  Tom Tromey  <tromey@redhat.com>

	* native/jni/java-lang/java_lang_VMProcess.c
	(Java_java_lang_VMProcess_nativeSpawn): Added 'redirect'
	argument.  Use defines instead of contents.
	* vm/reference/java/lang/VMProcess.java (redirect): New field.
	(spawn): Updated.
	(setProcessInfo): Updated.
	(VMProcess): Added 'redirect' argument.
	(nativeSpawn): Likewise.
	(exec): New overload.
	* java/lang/ProcessBuilder.java: New file.

2005-04-28  Robert Schuster  <thebohemian@gmx.net>

	* java/beans/Introspector: Fixed bug #12624, BeanDescriptors
	will now be set correctly.
	(flushCaches): Now flushes all cached intermediate data.

2005-04-28  Michael Koch  <konqueror@gmx.de>

	* javax/swing/JTextArea.java
	(replaceRange): Removed error throwing.

2005-04-28  Michael Koch  <konqueror@gmx.de>

	* java/security/AccessControlContext.java:
	Reformatted.

2005-04-28  Andreas Tobler  <a.tobler@schweiz.ch>

	* java/security/Security.java (Security): Silence the warning about no
	providers found in the no debug case.

2005-04-28  Michael Koch  <konqueror@gmx.de>

	* java/nio/charset/Charset.java
	(providers2): Renamed from 'providers'.

2005-04-27  Roman Kennke  <roman@kennke.org>

	* javax/swing/plaf/basic/BasicScrollBarUI
	(getThumbBounds): Do not make thumb smaller than
	minimumThumbSize.
	* javax/swing/plaf/metal/MetalLookAndFeel
	(initComponentDefaults): Added color defaults for ScrollBar.
	* javax/swing/plaf/metal/MetalScrollBarUI
	(paintThumb): Added.
	(getMinimumThumbSize): Added.

2005-04-27  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* java/net/URL.java: Remove org.metastatic.jessie from default
	protocol search path.

2005-04-27  Roman Kennke  <roman@kennke.org>

	* javax/swing/plaf/metal/MetalLookAndFeel
	(initComponentDefaults): Added some default colors.
