@@ -1,5 +1,12 @@
 2005-05-05  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
+	* java/lang/Class.java:
+	(getSimpleName()): Implemented.
+	* vm/reference/java/lang/VMClass.java:
+	(getSimpleName()): Reference implementation.
+
+2005-05-05  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
 	* include/java_lang_VMProcess.h:
 	Regenerated.
 	* native/jni/java-lang/java_lang_VMProcess.c:
